// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag should have a link 1`] = `
<scale-tag href="#">
  <mock:shadow-root>
    <style>
      .tag-0-0-7 {
  color:  #fff;
  display: inline-flex;
  padding: 4px 10px;
  font-size: 16px;
  background: #343a40;
  text-align: center;
  transition: all 0.15s ease-in-out;
  align-items: center;
  font-family: TeleNeoWeb-Bold;
  font-weight: 400;
  line-height: 1;
  white-space: nowrap;
  --icon-color: #fff;
  border-radius: 4px;
  vertical-align: baseline;
  justify-content: center;
}
.tag-0-0-7 scale-icon {
  margin-left: 5px;
}
.tag-0-0-7:not(.tag--disabled-0-0-12) {}
.tag-0-0-7:not(.tag--disabled-0-0-12) scale-icon {}
.tag-0-0-7:not(.tag--disabled-0-0-12) scale-icon:hover {
  --icon-color: red;
}
.tag--dismissable-0-0-8 {
  padding-right: 6px;
}
.tag--size-small-0-0-9 {
  padding: 4px 8px;
  font-size: 12px;
}
.tag--size-small-0-0-9 scale-icon {
  width: 12px;
  height: 12px;
}
.tag--size-small-0-0-9.tag--dismissable-0-0-8 {
  padding-right: 4px;
}
.tag--variant-secondary-0-0-10 {
  border: 1px solid #00739F;
  background: #00739F;
}
.tag--link-0-0-11 {
  text-decoration: none;
}
.tag--link-0-0-11.tag--variant-secondary-0-0-10 {
  border: 1px solid #00739F;
  background: #00739F;
}
.tag--link-0-0-11.tag--variant-secondary-0-0-10:hover {
  border: 1px solid #00739F;
  background: #00739F;
}
.tag--link-0-0-11.tag--variant-secondary-0-0-10:focus {
  border: 1px solid #00739F;
  background: #00739F;
}
.tag--disabled-0-0-12 {
  cursor: not-allowed;
  opacity: 0.5;
}
    </style>
    <a class="tag--link-0-0-11 tag-0-0-7" href="#" target="_self">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Label
</scale-tag>
`;

exports[`Tag should match snapshot 1`] = `
<scale-tag>
  <mock:shadow-root>
    <style>
      .tag-0-0-7 {
  color:  #fff;
  display: inline-flex;
  padding: 4px 10px;
  font-size: 16px;
  background: #343a40;
  text-align: center;
  transition: all 0.15s ease-in-out;
  align-items: center;
  font-family: TeleNeoWeb-Bold;
  font-weight: 400;
  line-height: 1;
  white-space: nowrap;
  --icon-color: #fff;
  border-radius: 4px;
  vertical-align: baseline;
  justify-content: center;
}
.tag-0-0-7 scale-icon {
  margin-left: 5px;
}
.tag-0-0-7:not(.tag--disabled-0-0-12) {}
.tag-0-0-7:not(.tag--disabled-0-0-12) scale-icon {}
.tag-0-0-7:not(.tag--disabled-0-0-12) scale-icon:hover {
  --icon-color: red;
}
.tag--dismissable-0-0-8 {
  padding-right: 6px;
}
.tag--size-small-0-0-9 {
  padding: 4px 8px;
  font-size: 12px;
}
.tag--size-small-0-0-9 scale-icon {
  width: 12px;
  height: 12px;
}
.tag--size-small-0-0-9.tag--dismissable-0-0-8 {
  padding-right: 4px;
}
.tag--variant-secondary-0-0-10 {
  border: 1px solid #00739F;
  background: #00739F;
}
.tag--link-0-0-11 {
  text-decoration: none;
}
.tag--link-0-0-11.tag--variant-secondary-0-0-10 {
  border: 1px solid #00739F;
  background: #00739F;
}
.tag--link-0-0-11.tag--variant-secondary-0-0-10:hover {
  border: 1px solid #00739F;
  background: #00739F;
}
.tag--link-0-0-11.tag--variant-secondary-0-0-10:focus {
  border: 1px solid #00739F;
  background: #00739F;
}
.tag--disabled-0-0-12 {
  cursor: not-allowed;
  opacity: 0.5;
}
    </style>
    <span class="tag-0-0-7">
      <slot></slot>
    </span>
  </mock:shadow-root>
  Label
</scale-tag>
`;
